# BirdCLEF_2026

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: baseline.yaml
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_submission.ipynb  submission.ipynb
scripts/: download_data.ps1  download_data.sh  precompute_mels.py
src/: audio.py  config.py  dataset.py  inference.py  models.py  train.py  utils.py
